--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@chakra-ui/react": "^2.10.9",
     "@emailjs/browser": "^4.4.1",
     "@hookform/resolvers": "^5.2.2",
+    "@tailwindcss/vite": "^4.1.16",
     "framer-motion": "^12.23.24",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
@@ -21,6 +22,7 @@
     "react-icons": "^5.5.0",
     "react-number-format": "^5.4.4",
     "react-router-dom": "^7.9.4",
+    "tailwindcss": "^4.1.16",
     "yup": "^1.7.1"
   },
   "devDependencies": {
