add email verification

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,3 +3,10 @@ NODE_ENV=""
 JWT_ACCESS_SECRET=""
 JWT_REFRESH_SECRET=""
 DB_NAME=""
+
+SMTP_HOST=""
+SMTP_PORT=""
+SMTP_USER=""
+SMTP_PASS=""
+CLIENT_ORIGIN=""
+JWT_EMAIL_VERIFY_SECRET="""
