--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "express": "^5.1.0",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.20.0"
+    "mongodb": "^6.20.0",
+    "nodemailer": "^7.0.10"
   }
 }
