--- a/backend/package.json
+++ b/backend/package.json
@@ -1,4 +1,10 @@
 {
+  "scripts": {
+    "start": "node server.js",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
+  },
   "dependencies": {
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
@@ -9,5 +15,11 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.20.0",
     "nodemailer": "^7.0.10"
+  },
+  "devDependencies": {
+    "@types/jest": "^30.0.0",
+    "@types/supertest": "^6.0.3",
+    "jest": "^30.2.0",
+    "supertest": "^7.1.4"
   }
 }
