vbecded optimizations. seo meta tags, lazy loading, etc.

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,7 @@ coverage/
 
 # Documentation
 TESTING_SETUP.md
+DEPLOYMENT.md
+PERFORMANCE_GUIDE.md
+OPTIMIZATION_SUMMARY.md
+OPTIMIZATION_COMPLETE.md
