--- a/backend/package.json
+++ b/backend/package.json
@@ -1,12 +1,14 @@
 {
   "scripts": {
     "start": "node server.js",
+    "dev": "nodemon server.js",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "compression": "^1.8.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
