--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
+    "@sendgrid/mail": "^8.1.6",
     "bcrypt": "^6.0.0",
     "compression": "^1.8.1",
     "cookie-parser": "^1.4.7",
