--- a/.gitignore
+++ b/.gitignore
@@ -38,8 +38,5 @@ coverage/
 *.lcov
 
 # Documentation
-TESTING_SETUP.md
-DEPLOYMENT.md
-PERFORMANCE_GUIDE.md
-OPTIMIZATION_SUMMARY.md
-OPTIMIZATION_COMPLETE.md
+*.md
+!README.md
